@@ -23,11 +23,13 @@
 #include <unordered_map>
 #include <NuxCore/NuxCore.h>
 #include <NuxCore/Rect.h>
+#include <NuxGraphics/CairoGraphics.h>
 #include <UnityCore/ConnectionManager.h>
 #include <UnityCore/Indicators.h>
 #include <core/core.h>
 #include <opengl/opengl.h>
 #include <composite/composite.h>
+#include <X11/extensions/shape.h>
 
 #include "DecorationsShape.h"
 #include "DecorationsDataPool.h"
@@ -116,6 +118,7 @@ private:
   void SyncXShapeWithFrameRegion();
   void SyncMenusGeometries() const;
   bool ShouldBeDecorated() const;
+  bool IsRectangular() const;
   GLTexture* ShadowTexture() const;
   unsigned ShadowRadius() const;
   std::string const& GetMenusPanelID() const;
@@ -126,6 +129,7 @@ private:
   void UpdateWindowEdgesGeo();
   void UpdateForceQuitDialogPosition();
   void RenderDecorationTexture(Side, nux::Geometry const&);
+  cu::PixmapTexture::Ptr BuildShapedShadowTexture(nux::Size const&, unsigned radius, nux::Color const&, Shape const&);
   void Paint(GLMatrix const&, GLWindowPaintAttrib const&, CompRegion const&, unsigned mask);
   void Draw(GLMatrix const&, GLWindowPaintAttrib const&, CompRegion const&, unsigned mask);
 
@@ -156,6 +160,7 @@ private:
   std::string last_title_;
   std::string panel_id_;
   std::vector<cu::SimpleTextureQuad> bg_textures_;
+  cu::PixmapTexture::Ptr shaped_shadow_pixmap_;
   std::shared_ptr<ForceQuitDialog> force_quit_;
   InputMixer::Ptr input_mixer_;
   Layout::Ptr top_layout_;
@@ -166,8 +171,6 @@ private:
   Item::Ptr edge_borders_;
 
   EMConverter::Ptr cv_;
-
-  cu::PixmapTexture::Ptr shaped_shadow_pixmap_;
 };
 
 struct Manager::Impl : sigc::trackable
@@ -192,7 +195,6 @@ private:
   void BuildActiveShadowTexture();
   void BuildInactiveShadowTexture();
   cu::PixmapTexture::Ptr BuildShadowTexture(unsigned radius, nux::Color const&);
-  cu::PixmapTexture::Ptr BuildShapedShadowTexture(unsigned int radius, nux::Color const& color, DecorationsShape const& shape);
   void OnShadowOptionsChanged(bool active);
   void OnWindowFrameChanged(bool, ::Window, std::weak_ptr<decoration::Window> const&);
   bool OnMenuKeyActivated(std::string const&);
